# Bachelor-Thesis_VSOMEIP

./: README.md
VSOMEIP/1_RequestResponse/Config/: vsomeip-udp-client.json  vsomeip-udp-service.json
VSOMEIP/1_RequestResponse/Server/: response-sample.cpp
VSOMEIP/2_LogoRequestResponse/Client/: Readme.txt  request-sample.cpp
VSOMEIP/2_LogoRequestResponse/Server/: CMakeLists.txt  response-sample.cpp
VSOMEIP/3_RequestResponse/Client/: CMakeLists.txt  request-sample.cpp  sample-ids.hpp
VSOMEIP/3_RequestResponse/Server/: response-sample.cpp
VSOMEIP/4_LogoRequestResponseWithTimeMeasurements/Client/: request-sample.cpp
VSOMEIP/4_LogoRequestResponseWithTimeMeasurements/Server/: response-sample.cpp
